drkns 19.03.2018 22:47:53 +0000 - build 5171

1. В меню выбора архивного плагина неадекватно работал выбор стандартной ассоциации.

2. Рефакторинг.

MZK 18.03.2018 21:30:11 -0700

1. Переписал страницу @PreserveStyle справки (английскую и русскую).

drkns 14.03.2018 22:33:55 +0000 - build 5170

1. Нефункциональная косметика:
   - virtual override -> override
   - (void) -> ()
   - // fallthrough -> [[fallthrough]];
   - --memcpy

drkns 14.03.2018 10:01:32 +0000 - build 5169

1. Пара уточнений 5168.

drkns 13.03.2018 22:40:25 +0000 - build 5168

1. Рефакторинг.

2. clang warnings.

3. Уточнение 5154.

yjh 11.03.2018 14:04:57 +0300 - build 5167

1. Уточнения в поддержке старых версий системы с использованием DelayLoad

drkns 11.03.2018 09:47:19 +0000 - build 5166

1. 0003591: По F9 пункт "Правая" подсвечивается, а "Левая" нет

drkns 10.03.2018 21:35:39 +0000 - build 5165

1. Уточнение 5164.1.

drkns 10.03.2018 20:23:38 +0000 - build 5164

1. Исправим предупреждения VS2017.6 вместо их подавления.

2. Политика ОС "NoDrives" не применялась к отключённым сетевым дискам.

drkns 05.03.2018 19:15:49 +0000 - build 5163

1. Уточнение 5161.

drkns 05.03.2018 08:01:15 +0000 - build 5162

1. Поправлена сборка в VS2015.

drkns 04.03.2018 22:56:16 +0000 - build 5161

1. Static analysis warnings.

2. Рефакторинг.

drkns 03.03.2018 17:24:57 +0000 - build 5160

1. Не смешиваем узкие и широкие символы в вызовах fmt.

zg 03.03.2018 17:11:47 +0200 - build 5159

1. уточнение 5049: PointToName падала при передачи нулевого указателя.

drkns 02.03.2018 13:57:21 +0000 - build 5158

1. Уточнение 5155.

drkns 02.03.2018 09:54:21 +0000 - build 5157

1. Уточнение 5155.

drkns 02.03.2018 09:28:54 +0000 - build 5156

1. Уточнение 5155.

drkns 01.03.2018 21:45:36 +0000 - build 5155

1. Рефакторинг.

MZK 28.02.2018 22:26:27 -0800

1. Перевёл и поредактировал страницу @Viewer справки (английскую и русскую).

drkns 01.03.2018 00:25:44 +0000 - build 5154

1. Продолжение 5150.3.

2. Рефакторинг.
