@@ -1,3 +1,7 @@
+drkns 20.03.2018 21:35:50 +0000 - build 5172
+
+1. Уточнение 5171.
+
 drkns 19.03.2018 22:47:53 +0000 - build 5171
 
 1. В меню выбора архивного плагина неадекватно работал выбор стандартной ассоциации.
